--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="description" content="Site oficial da Alcance Paranaguá. Somos uma crescente comunidade de discípulos, com viver santo, que se reúne no templo e nas casas. Venha estar com a gente!">
     <meta name="keywords" content="alcance, igreja, comunidade, paranaguá, célula">
     <meta name="robots" content="index, follow">
-    <meta name="author" content="VinsSoftware">
+    <meta name="author" content="Next Branding">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="canonical" href="https://alcanceparanagua.com.br">
     <link rel="shortcut icon" href="Imagens/favicon.ico" type="image/x-icon">
@@ -312,7 +312,7 @@
         </div>
     </footer>
     <div class="Desenvolvido-por">
-        <p>Desenvolvido por <a href="https://vinssoftware.com.br/" target="_blank">VinsSoftware</a> &copy;</p>
+        <p>Desenvolvido por <a href="https://nextbranding.com.br/" target="_blank">Next Branding</a> &copy;</p>
     </div>
 <script type="application/ld+json">
 {
