--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@
             <img class="logo-footer" src="Imagens/logo-preta.png" alt="logo da Alcance Paranaguá">
         </div>
         <div class="referencia">
-            <p>Endereço: Avenida das Pérolas, 357</p>
-            <p>Jardim Ouro Fino, Paranaguá - PR, 83215-720</p>
+            <p>Endereço: Av. Gov. Bento Munhoz da Rocha Neto, 2363</p>
+            <p>Jardim Guaraituba, Paranaguá - PR, 83215-720</p>
         </div>
     </footer>
     <div class="Desenvolvido-por">
