Adicionando link para inscrições

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                         <a class="nav-item nav-link" id="Celula-menu" href="#"><b>Células</b></a>
                         <a class="nav-item nav-link" id="Contri-menu" href="#contribuicoes"><b>Contribuições</b></a>
                         <a class="nav-item nav-link" id="Missao-menu" href="#missoes"><b>Missões</b></a>
+						<a class="nav-item nav-link" id="Linktree-menu" href="https://linktr.ee/alcanceparanagua" target="_blank"><b>Inscricões</b></a>
                     </div>
                 </div>
             </nav>
