--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <div class="redes">
                                 <p class="frase5">Pastor Marcio</p>
                                 <div class="Instagran">
-                                    <a href="https://www.instagram.com/marcionunesalcance/" target="_blank"><img class="tamanho-icone" src="Imagens/instagram.svg" alt="icone instagram"></a>
+                                    <a href="https://www.instagram.com/marcio.nunesz/" target="_blank"><img class="tamanho-icone" src="Imagens/instagram.svg" alt="icone instagram"></a>
                                 </div>
                                 <p class="frase5">Pastora Lilian</p>
                                 <div class="Instagran">
