--- a/index.html
+++ b/index.html
@@ -129,18 +129,18 @@
                 <div class="nossos-pastores">
                     <div class="frases">
                         <p class="frase1">Sejam bem-vindos!!</p>
-                        <P class="frase2"> Conhecer Jesus e fazê-lo conhecido é nossa maior expectativa.</P>
-                        <p class="frase3">Ele mesmo (Jesus) nos convida: “Vinde a Mim…” (Mateus 11:28).<br> Como igreja, estendemos o convite a você, <br>para vivermos esta experiência juntos, <br></p>
-                        <p class="frase4">Pois sabemos que Ele tem <strong>MUITO MAIS</strong> para a sua vida.</p>
+                        <P class="frase2">Conhecer Jesus e fazê-lo conhecido é nossa maior expectativa.</P>
+                        <p class="frase3">Ele mesmo nos convida: “Vinde a Mim…” (Mateus 11:28).<br> Como igreja, estendemos o convite a você, <br>para vivermos esta experiência juntos, <br></p>
+                        <p class="frase4">pois sabemos que Ele tem <strong>MUITO MAIS</strong> para a sua vida.</p>
                         <div class="redes-pastor">
                             <div class="redes">
-                                <p class="frase5">Pastor Marcio</p>
+                                <p class="frase5">Pastor Paulo</p>
                                 <div class="Instagran">
-                                    <a href="https://www.instagram.com/marcio.nunesz/" target="_blank"><img class="tamanho-icone" src="Imagens/instagram.svg" alt="icone instagram"></a>
+                                    <a href="https://www.instagram.com/jrbroska/" target="_blank"><img class="tamanho-icone" src="Imagens/instagram.svg" alt="icone instagram"></a>
                                 </div>
-                                <p class="frase5">Pastora Lilian</p>
+                                <p class="frase5">Pastora Kely</p>
                                 <div class="Instagran">
-                                    <a href="https://www.instagram.com/lilianapnunes/" target="_blank"><img class="tamanho-icone" src="Imagens/instagram.svg" alt="icone instagram"></a>
+                                    <a href="https://www.instagram.com/kelyxc/" target="_blank"><img class="tamanho-icone" src="Imagens/instagram.svg" alt="icone instagram"></a>
                                 </div>
                             </div>
                         </div> 
