--- a/index.html
+++ b/index.html
@@ -128,12 +128,11 @@
                 <h2 class="titulo-pastores">Nossos Pastores</h2>
                 <div class="nossos-pastores">
                     <div class="frases">
-                        <p class="hero-text">
-  Sejam bem-vindos!!<br class="visually-hidden-md">Conhecer Jesus e fazê-lo conhecido é nossa maior expectativa.
-  <span class="verse">Ele mesmo nos convida: “Vinde a Mim…” (Mateus 11:28).</span>
-  Como igreja, estendemos o convite a você, para vivermos esta experiência juntos,
-  pois sabemos que Ele tem <strong>MUITO MAIS</strong> para a sua vida.
-</p>
+                        <p class="frase1">Sejam bem-vindos!!</p>
+                        <P class="frase2"> Conhecer Jesus e fazê-lo conhecido é nossa maior expectativa.</P>
+                        <p class="frase3">Ele mesmo (Jesus) nos convida: “Vinde a Mim…” (Mateus 11:28).<br> Como igreja, estendemos o convite a você, <br>para vivermos esta experiência juntos, <br></p>
+                        <p class="frase4">Pois sabemos que Ele tem <strong>MUITO MAIS</strong> para a sua vida.</p>
+                        <div class="redes-pastor">
                         <div class="redes-pastor">
                             <div class="redes">
                                 <p class="frase5">Pastor Paulo</p>
