--- a/index.fixed_complete.html
+++ b/index.fixed_complete.html
@@ -136,13 +136,13 @@
 </p>
 <div class="redes-pastor">
                             <div class="redes">
-                                <p class="frase5">Pastor Marcio</p>
+                                <p class="frase5">Pastor Paulo</p>
                                 <div class="Instagran">
-                                    <a href="https://www.instagram.com/marcionunesalcance/" target="_blank"><img class="tamanho-icone" src="Imagens/instagram.svg" alt="icone instagram"></a>
+                                    <a href="https://www.instagram.com/jrbroska/" target="_blank"><img class="tamanho-icone" src="Imagens/instagram.svg" alt="icone instagram"></a>
                                 </div>
-                                <p class="frase5">Pastora Lilian</p>
+                                <p class="frase5">Pastora Kely</p>
                                 <div class="Instagran">
-                                    <a href="https://www.instagram.com/lilianapnunes/" target="_blank"><img class="tamanho-icone" src="Imagens/instagram.svg" alt="icone instagram"></a>
+                                    <a href="https://www.instagram.com/kelyxc/" target="_blank"><img class="tamanho-icone" src="Imagens/instagram.svg" alt="icone instagram"></a>
                                 </div>
                             </div>
                         </div> 
