adicionando canal do whatsapp

--- a/index.html
+++ b/index.html
@@ -179,20 +179,28 @@
                 <h2 class="Palavratitulo">Nos acompanhe em nossas redes sociais</h2>
             </div>
             <div class="container-redes">
-                <div class="facebook">
-                    <a class="botao-incone" href="https://www.facebook.com/alcanceparanagua/" target="_blank"><img src="Imagens/facebook.svg" alt="icone facebook"></a>
-                    <p class="texto1">Facebook</p>
-                    <p class="text-sub">Curta nossa página no Facebook</p>
-                    <div class="botao-de-acesso-face">
-                        <p class="botao2"><a class="link" href="https://www.facebook.com/alcanceparanagua/" target="_blank">Curtir</a></p>
-                    </div>
-                </div>
                 <div class="instagran">
                     <a class="botao-incone" href="https://www.instagram.com/alcanceparanagua/" target="_blank"><img src="Imagens/instagram.svg" alt="icone instagram"></a>
                     <p class="texto1">Instagram</p>
                     <p class="text-sub">Nos siga no Instagram</p>
                     <div class="botao-de-acesso">
                         <p class="botao2"><a class="link" href="https://www.instagram.com/alcanceparanagua/" target="_blank">Seguir</a></p>
+                    </div>
+                </div>
+                <div class="whatsapp">
+                    <a class="botao-incone" href="https://www.facebook.com/alcanceparanagua/" target="_blank"><img src="Imagens/whats.svg" alt="icone whatsapp"></a>
+                    <p class="texto1">WhatsApp</p>
+                    <p class="text-sub">Entre em nosso canal no WhatsApp</p>
+                    <div class="botao-de-acesso">
+                        <p class="botao2"><a class="link" href="https://whatsapp.com/channel/0029VaghkfV5K3zXVTn26233/" target="_blank">Curtir</a></p>
+                    </div>
+                </div>
+                <div class="facebook">
+                    <a class="botao-incone" href="https://www.facebook.com/alcanceparanagua/" target="_blank"><img src="Imagens/facebook.svg" alt="icone facebook"></a>
+                    <p class="texto1">Facebook</p>
+                    <p class="text-sub">Curta nossa página no Facebook</p>
+                    <div class="botao-de-acesso-face">
+                        <p class="botao2"><a class="link" href="https://www.facebook.com/alcanceparanagua/" target="_blank">Curtir</a></p>
                     </div>
                 </div>
                 <div class="youtube">
