--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     <p class="texto1">WhatsApp</p>
                     <p class="text-sub">Entre em nosso canal no WhatsApp</p>
                     <div class="botao-de-acesso">
-                        <p class="botao2"><a class="link" href="https://whatsapp.com/channel/0029VaghkfV5K3zXVTn26233/" target="_blank">Curtir</a></p>
+                        <p class="botao2"><a class="link" href="https://whatsapp.com/channel/0029VaghkfV5K3zXVTn26233/" target="_blank">Entrar</a></p>
                     </div>
                 </div>
                 <div class="facebook">
