--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     </div>
                 </div>
                 <div class="whatsapp">
-                    <a class="botao-incone" href="https://www.facebook.com/alcanceparanagua/" target="_blank"><img src="Imagens/whats.svg" alt="icone whatsapp"></a>
+                    <a class="botao-incone" href="https://whatsapp.com/channel/0029VaghkfV5K3zXVTn26233/" target="_blank"><img src="Imagens/whats.svg" alt="icone whatsapp"></a>
                     <p class="texto1">WhatsApp</p>
                     <p class="text-sub">Entre em nosso canal no WhatsApp</p>
                     <div class="botao-de-acesso">
